Some speed increases as well as the wall bug is now fixed :).

--- a/shadow warrior/shadow warrior.csproj
+++ b/shadow warrior/shadow warrior.csproj
@@ -94,6 +94,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="base\SW.GRP" />
+    <Content Include="buildnative.dll" />
+    <Content Include="Microsoft.Phone.InteropServices.dll" />
     <Content Include="WPInteropManifest.xml" />
     <None Include="Properties\AppManifest.xml" />
     <None Include="Properties\WMAppManifest.xml" />
