--- a/trunk/buildlite/buildlite.csproj
+++ b/trunk/buildlite/buildlite.csproj
@@ -69,7 +69,7 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Windows.Browser" />
     <Reference Include="WriteableBitmapExWinPhone">
-      <HintPath>..\build\Bin\Debug\WriteableBitmapExWinPhone.dll</HintPath>
+      <HintPath>..\assemblys\WriteableBitmapExWinPhone.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -94,9 +94,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="base\SW.GRP" />
-    <Resource Include="base\ui\yingyangblur.png" />
-    <Resource Include="base\ui\wp7movement.png" />
-    <Resource Include="base\ui\lowang.png" />
     <None Include="Properties\AppManifest.xml" />
   </ItemGroup>
   <ItemGroup>
@@ -104,9 +101,6 @@
       <Project>{6794C26C-4A8B-440C-A73E-32E8C98421AA}</Project>
       <Name>build</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="base\music\track3.mp3" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Silverlight\$(SilverlightVersion)\Microsoft.Silverlight.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
