--- a/trunk/Editor/Editor.csproj
+++ b/trunk/Editor/Editor.csproj
@@ -43,6 +43,9 @@
   <ItemGroup>
     <Reference Include="Microsoft.Phone" />
     <Reference Include="Microsoft.Phone.Interop" />
+    <Reference Include="SilverlightMenu.Library">
+      <HintPath>..\assemblys\SilverlightMenu.Library.dll</HintPath>
+    </Reference>
     <Reference Include="System.Windows" />
     <Reference Include="system" />
     <Reference Include="System.Core" />
