--- a/trunk/editart/editart.csproj
+++ b/trunk/editart/editart.csproj
@@ -47,6 +47,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
+    <Reference Include="SilverlightMenu.Library">
+      <HintPath>..\assemblys\SilverlightMenu.Library.dll</HintPath>
+    </Reference>
     <Reference Include="System.Windows" />
     <Reference Include="system" />
     <Reference Include="System.Core" />
