--- a/buildlite/buildlite.csproj
+++ b/buildlite/buildlite.csproj
@@ -62,6 +62,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
+    <Reference Include="SilverlightMenu.Library">
+      <HintPath>..\assemblys\SilverlightMenu.Library.dll</HintPath>
+    </Reference>
     <Reference Include="System.Windows" />
     <Reference Include="system" />
     <Reference Include="System.Core" />
