--- a/trunk/duke3d/duke3d/duke3dphone.csproj
+++ b/trunk/duke3d/duke3d/duke3dphone.csproj
@@ -62,7 +62,8 @@
   <ItemGroup>
     <Compile Include="game\Flags.cs" />
     <Compile Include="game\MyTypes.cs" />
-    <Compile Include="game\script\gamescriptassembly.cs" />
+    <Compile Include="game\script\gamescript_assembly.cs" />
+    <Compile Include="game\script\gamescript_interface.cs" />
     <Compile Include="phoneApp.xaml.cs">
       <DependentUpon>phoneApp.xaml</DependentUpon>
     </Compile>
@@ -111,6 +112,7 @@
     <Resource Include="base\ui\lowang.png" />
     <Resource Include="base\ui\wp7movement.png" />
     <Resource Include="base\ui\yingyangblur.png" />
+    <Content Include="game.dll" />
     <Content Include="SplashScreenImage.png" />
     <None Include="Properties\AppManifest.xml">
       <SubType>Designer</SubType>
