--- a/duke3d/duke3d/duke3d.csproj
+++ b/duke3d/duke3d/duke3d.csproj
@@ -113,6 +113,7 @@
     <Content Include="base\game.dll" />
     <Content Include="base\music\grabbag.mp3" />
     <Content Include="base\music\stalker.mp3" />
+    <None Include="base\PLAYER.CON" />
     <None Include="base\SPRITES.CON" />
     <None Include="base\DEFS.CON" />
     <None Include="base\GAME.CON" />
